--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "movies-series-app",
+  "name": "find-movies-series-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yaser-alazem.github.io/movies-series-info",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
