--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "find-movies-series-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yaser-alazem.github.io/movies-series-info",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
